[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/player_icon_current_hp.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/raw/Mat Saleh.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/player/player_icon_current_armor.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="ActionName" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -253.677
margin_top = -179.049
margin_right = -189.677
margin_bottom = -149.049
custom_fonts/font = SubResource( 1 )
text = "fuck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntentContainer" type="HBoxContainer" parent="."]
margin_left = -252.617
margin_top = -179.049
margin_right = -252.617
margin_bottom = -179.049
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 132.936 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discard" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
text = "discard random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 44.0
text = "deal 5 damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 114.0
margin_bottom = 68.0
text = "gain armor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rot" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 114.0
margin_bottom = 92.0
text = "rot components"

[node name="Heal" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 114.0
margin_bottom = 116.0
text = "HEAL"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 164.065
margin_top = -68.173
margin_right = 204.065
margin_bottom = -54.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 166.312
margin_top = -31.4644
margin_right = 206.312
margin_bottom = -17.4644
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloatingNumberPos" type="Position2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="ActionStepTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="StatsBox" type="VBoxContainer" parent="."]
margin_left = -60.6136
margin_top = -211.023
margin_right = 271.386
margin_bottom = -55.023
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StatsBox"]
margin_right = 332.0
margin_bottom = 56.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "uwu"
align = 2

[node name="StatsBox" type="HBoxContainer" parent="StatsBox"]
margin_top = 60.0
margin_right = 332.0
margin_bottom = 156.0
grow_horizontal = 0
alignment = 2

[node name="ArmorBox" type="HBoxContainer" parent="StatsBox/StatsBox"]
margin_right = 164.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="StatsBox/StatsBox/ArmorBox"]
margin_top = 11.0
margin_right = 64.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.184314, 0.454902, 0.45098, 1 )
text = "10"

[node name="TextureRect" type="TextureRect" parent="StatsBox/StatsBox/ArmorBox"]
margin_left = 68.0
margin_right = 164.0
margin_bottom = 96.0
texture = ExtResource( 4 )

[node name="HealthBox" type="HBoxContainer" parent="StatsBox/StatsBox"]
margin_left = 168.0
margin_right = 332.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="StatsBox/StatsBox/HealthBox"]
margin_top = 11.0
margin_right = 64.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.941176, 0.188235, 0.517647, 1 )
text = "10"

[node name="TextureRect" type="TextureRect" parent="StatsBox/StatsBox/HealthBox"]
margin_left = 68.0
margin_right = 164.0
margin_bottom = 96.0
texture = ExtResource( 2 )

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="VBoxContainer/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="VBoxContainer/Damage" to="." method="_on_Damage_pressed"]
[connection signal="pressed" from="VBoxContainer/Armor" to="." method="_on_Armor_pressed"]
[connection signal="pressed" from="VBoxContainer/Rot" to="." method="_on_Rot_pressed"]
[connection signal="pressed" from="VBoxContainer/Heal" to="." method="_on_Heal_pressed"]
